Demos: Fix markup in captcha and marketo demo
Ref #1159
Ref #1185

--- a/demo/marketo/step2.htm
+++ b/demo/marketo/step2.htm
@@ -8,7 +8,7 @@
 	<script src="../../dist/jquery.validate.js"></script>
 	<script src="jquery.maskedinput.js"></script>
 	<script src="mktSignup.js"></script>
-	<link rel="stylesheet" href="stylesheet.css" />
+	<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 <!-- start page wrapper -->
@@ -22,7 +22,7 @@
 			</div>
 			<div class="logo">
 				<a href="#">
-					<img src="images/logo_marketo.gif" width="168" height="73" alt="Marketo" />
+					<img src="images/logo_marketo.gif" width="168" height="73" alt="Marketo">
 				</a>
 			</div>
 			<div class="nav-global">
@@ -59,15 +59,13 @@
 					<div class="action-container" style="display:none;"></div>
 					<h1>Step 2 of 2</h1>
 					<h2>Billing Information</h2>
-					<p>
-					</p>
-					<br clear="all" />
+					<br clear="all">
 					<div>
 						<form id="billingForm" action="" method="get">
 							<div class="error" style="display:none;">
-								<img src="images/warning.gif" alt="Warning!" width="24" height="24" style="float:left; margin: -5px 10px 0px 0px; " />
+								<img src="images/warning.gif" alt="Warning!" width="24" height="24" style="float:left; margin: -5px 10px 0px 0px; ">
 								<span></span>.
-								<br clear="all" />
+								<br clear="all">
 							</div>
 							<table cellpadding="0" cellspacing="0" border="0">
 								<tr>
@@ -276,16 +274,16 @@
 											<span></span>
 											<input class="formButton" type="submit" value="Finish" style="width: 180px">
 										</div>
-										<br clear="all" />
+										<br clear="all">
 									</td>
 								</tr>
 							</table>
 						</form>
-						<br clear="all" />
+						<br clear="all">
 					</div>
 				</div>
 				<!-- end main content -->
-				<br />
+				<br>
 			</div>
 			<!-- end col-main -->
 			<!-- start left col -->
@@ -294,7 +292,7 @@
 				<div class="nav-left">
 				</div>
 				<div class="left-nav-callout png" style="top: 15px; margin-bottom: 100px;">
-					<img src="images/left-nav-callout-long.png" class="png" alt="" />
+					<img src="images/left-nav-callout-long.png" class="png" alt="">
 					<h6>Sign Up Process</h6>
 					<a style="background-image: url(images/step1-24.gif); font-weight: normal; text-decoration: none; cursor: default;">Sign up with a valid credit card.</a>
 					<a style="background-image: url(images/step2-24.gif); font-weight: normal; text-decoration: none; cursor: default;">Connect to your Google AdWords account.  You will need your AdWords Customer ID.</a>
@@ -302,11 +300,11 @@
 				</div>
 				<div class="footerAddress">
 					<b>Marketo Inc.</b>
-					<br />1710 S. Amphlett Blvd.
-					<br />San Mateo, CA 94402 USA
-					<br />
+					<br>1710 S. Amphlett Blvd.
+					<br>San Mateo, CA 94402 USA
+					<br>
 				</div>
-				<br clear="all" />
+				<br clear="all">
 			</div>
 			<!-- end left col -->
 		</div>
