Core: Escape id/name before using it as a selector in errorsFor
Fixes #1275

--- a/test/index.html
+++ b/test/index.html
@@ -173,6 +173,10 @@
 		<input name="testForm17text" id="testForm17text" data-rule-required="true" data-msg="required" aria-describedby="testForm17text-description">
 		<span id="testForm17text-description">This is where you enter your data</span>
 	</form>
+	<form id="testForm18">
+		<!-- test id/name containing brackets -->
+		<input name="testForm18[text]" id="testForm18[text]" required>
+	</form>
 	<form id="dataMessages">
 		<input name="dataMessagesName" id="dataMessagesName" class="required" data-msg-required="You must enter a value here">
 	</form>
