--- a/test/index.html
+++ b/test/index.html
@@ -177,6 +177,10 @@
 		<!-- test id/name containing brackets -->
 		<input name="testForm18[text]" id="testForm18[text]" required>
 	</form>
+	<form id="testForm19">
+	<!-- test id/name containing $ -->
+	<input name="testForm19$text" id="testForm19$text" required>
+	</form>
 	<form id="dataMessages">
 		<input name="dataMessagesName" id="dataMessagesName" class="required" data-msg-required="You must enter a value here">
 	</form>
