Demo: Added a tinymce4 demo
Closes #1340

--- a/demo/index.html
+++ b/demo/index.html
@@ -209,7 +209,9 @@
 		</li>
 		<li><a href="themerollered.html">Forms styled with jQuery UI Themeroller</a>
 		</li>
-		<li><a href="tinymce/">TinyMCE Demo</a>
+		<li><a href="tinymce/">TinyMCE3 Demo</a>
+		</li>
+		<li><a href="tinymce4/">TinyMCE4 Demo</a>
 		</li>
 		<li><a href="file_input.html">File inputs</a>
 		</li>
