Demos: Fix bad default message in signup form

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,8 @@
 					equalTo: "Please enter the same password as above"
 				},
 				email: "Please enter a valid email address",
-				agree: "Please accept our policy"
+				agree: "Please accept our policy",
+				topic: "Please select at least 2 topics"
 			}
 		});
 
