Added unit test for number validation
Test will fail if form is valid when a "-" symbol is the only character
in an input box defined as a number

--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html id="html">
 <head>
 	<meta charset="utf-8">
@@ -370,6 +370,9 @@
 		<input id="radiocheckbox-1-2" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 		<input id="radiocheckbox-1-3" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 	</form>
+    <form id="validatenumbers">
+        <input type="text" id="validatenumber" name="number" />
+    </form>
 </div>
 </body>
 </html>
