Core: #1457 unit test

--- a/test/index.html
+++ b/test/index.html
@@ -370,6 +370,14 @@
 		<input id="radiocheckbox-1-2" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 		<input id="radiocheckbox-1-3" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 	</form>
+	<form id="radiocheckbox_array">
+		<input id="radio_array_1" type="radio" value="1" name="radio_array[]" required="true">
+		<input id="radio_array_2" type="radio" value="2" name="radio_array[]" required="true">
+		<input id="radio_array_3" type="radio" value="3" name="radio_array[]" required="true">
+		<input id="checkbox_array_1" type="checkbox" value="1" name="checkbox_array[]" required="true" minlength=2>
+		<input id="checkbox_array_2" type="checkbox" value="2" name="checkbox_array[]" required="true" minlength=2>
+		<input id="checkbox_array_3" type="checkbox" value="3" name="checkbox_array[]" required="true" minlength=2>
+	</form>
 </div>
 </body>
 </html>
