Core: Refactor attributeRules and dataRules to share noramlizer
Closes #1391

--- a/test/index.html
+++ b/test/index.html
@@ -322,6 +322,7 @@
 		<input id="rangeAbsentInvalidGreater" name="rangeAbsentInvalidGreater" min="50" max="200" value="1000">
 		<input id="rangeAbsentInvalidLess" name="rangeAbsentInvalidLess" min="200" max="1000" value="50">
 		<input type="text" id="rangeTextValid" name="rangeTextValid" min="50" max="1000" value="200">
+		<input type="text" id="rangeTextDataRuleValid" name="rangeTextValid" min="50" data-rule-max="1000.00" value="200">
 		<input id="rangeAbsentValid" name="rangeAbsentValid" min="50" max="1000" value="200">
 		<!-- ranges are like numbers in html5, except that browser is not required
 			 to demand an exact value.  User interface could be a slider.
