Demos: Add new demo, contributed by Marcus Kästner
Combines a custom method, jQuery UI UI theme and custom error
positioning in one demo for booking retro cinema tickets.

Also cleans up the demo index a bit.

--- a/demo/index.html
+++ b/demo/index.html
@@ -225,19 +225,11 @@
 	</ul>
 	<h3>Real-world examples</h3>
 	<ul>
-		<li><a href="milk/">Remember The Milk signup form</a>
-		</li>
-		<li><a href="marketo/">Marketo signup form</a>
-		</li>
-		<li><a href="multipart/">Buy and Sell a House multipart form</a>
-		</li>
-		<li><a href="captcha/">Remote captcha validation</a>
-		</li>
-	</ul>
-	<h3>Testsuite</h3>
-	<ul>
-		<li><a href="../test/">Validation Testsuite</a>
-		</li>
+		<li><a href="cinema/">Retro Cinema Registration</a></li>
+		<li><a href="milk/">Remember The Milk signup form</a></li>
+		<li><a href="marketo/">Marketo signup form</a></li>
+		<li><a href="multipart/">Buy and Sell a House multipart form</a></li>
+		<li><a href="captcha/">Remote captcha validation</a></li>
 	</ul>
 </div>
 </body>
