Core: Allow 'false' as value when overriding rules

--- a/test/index.html
+++ b/test/index.html
@@ -71,6 +71,9 @@
 		<label id="errorFirstnamec" for="firstnamec" class="error">error for firstname</label>
 		<input title="buga" name="lastname" id="lastnamec">
 		<input name="username" id="usernamec">
+		<input type="text" name="year" id="yeara" data-rule-required="false">
+		<input type="text" name="month" id="montha" date="false">
+		<input type="text" name="month" id="monthb" class="date" date="false">
 	</form>
 	<form id="userForm">
 		<input type="text" data-rule-required="true" name="username" id="username">
