forget to add validClass option.

--- a/demo/custom-methods-demo.html
+++ b/demo/custom-methods-demo.html
@@ -29,6 +29,7 @@
 			errorPlacement: function(error, element) {
 				error.appendTo(element.parent("td").next("td"));
 			},
+			validClass: "success",
 			success: function(label) {
 				label.text("ok!").addClass("success");
 			},
