Test: Added unit test that runs into the issue reported in #1523

--- a/test/index.html
+++ b/test/index.html
@@ -376,6 +376,10 @@
 		<input type="checkbox" id="testForm20['checkboxinput']" name="testForm20['checkbox input']" required>
 		<input type="radio" id="testForm20['radioinput']" name="testForm20['radio input']" required>
 	</form>
+	<form id="testForm21">
+		<label for="testForm21[].value">Input text</label>
+		<input type="text" name="testForm21[].value" id="testForm21[].value" required minlength="15">
+	</form>
 </div>
 </body>
 </html>
