Core: Escape errorID for use in the regex, not to build aria-describedby
The error ID was being escaped for use in a regex, but these escaped
characters were also being passed on to the aria-describedby value
set in the HTML, which means the ID doesn't match up with the ID of
the element it's referring to.

Fixes #1523
Closes #1587

--- a/test/index.html
+++ b/test/index.html
@@ -377,8 +377,8 @@
 		<input type="radio" id="testForm20['radioinput']" name="testForm20['radio input']" required>
 	</form>
 	<form id="testForm21">
-		<label for="testForm21[].value">Input text</label>
-		<input type="text" name="testForm21[].value" id="testForm21[].value" required minlength="15">
+		<label for="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~">Input text</label>
+		<input type="text" name="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~\" id="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~" required minlength="15">
 	</form>
 </div>
 </body>
