Core: Split out `creditcard` method
As mentioned by Jörn in #1506

--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 	<script src="rules.js"></script>
 	<script src="messages.js"></script>
 	<script src="methods.js"></script>
+	<script src="additional/creditcard.js"></script>
 	<script src="aria.js"></script>
 	<script src="error-placement.js"></script>
 </head>
