--- a/test/index.html
+++ b/test/index.html
@@ -72,6 +72,7 @@
 		<label id="errorFirstnamec" for="firstnamec" class="error">error for firstname</label>
 		<input title="buga" name="lastname" id="lastnamec">
 		<input name="username" id="usernamec">
+		<input id="urlc" type="text" name="urlc">
 	</form>
 	<form id="userForm">
 		<input type="text" data-rule-required="true" name="username" id="username">
@@ -379,7 +380,7 @@
 	</form>
 	<form id="testForm21">
 		<label for="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~">Input text</label>
-		<input type="text" name="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~\" id="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~" required minlength="15">
+		<input type="text" name="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~" id="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~" required minlength="15">
 	</form>
 </div>
 </body>
