--- a/test/index.html
+++ b/test/index.html
@@ -312,7 +312,7 @@
 		<input type="date" id="rangeDateInvalidLess" name="rangeDateInvalidLess" min="2012-11-21" max="2013-01-21" value="2012-10-21">
 		<input type="date" id="maxDateValid" name="maxDateValid" max="2013-01-21" value="2012-12-21">
 		<input type="date" id="rangeDateValid" name="rangeDateValid" min="2012-11-21" max="2013-01-21" value="2012-12-21">
-		<!-- input type text is not supposed to have min/max according to html5,
+		<!-- input type text is not supposed to have min/max/step according to html5,
 			 but for backward compatibility with 1.10.0 we treat it as number.
 			 you can also use type="number", in which case the browser may also
 			 do validation, and mobile browsers may offer a numeric keypad to edit
@@ -321,15 +321,17 @@
 		  -->
 		<input type="text" id="rangeTextInvalidGreater" name="rangeTextInvalidGreater" min="50" max="200" value="1000">
 		<input type="text" id="rangeTextInvalidLess" name="rangeTextInvalidLess" min="200" max="1000" value="50">
+		<input type="text" id="rangeTextInvalidStep" name="rangeTextInvalidStep" min="200" max="1000" step="100" value="250">
 		<input id="rangeAbsentInvalidGreater" name="rangeAbsentInvalidGreater" min="50" max="200" value="1000">
 		<input id="rangeAbsentInvalidLess" name="rangeAbsentInvalidLess" min="200" max="1000" value="50">
-		<input type="text" id="rangeTextValid" name="rangeTextValid" min="50" max="1000" value="200">
-		<input type="text" id="rangeTextDataRuleValid" name="rangeTextValid" min="50" data-rule-max="1000.00" value="200">
-		<input id="rangeAbsentValid" name="rangeAbsentValid" min="50" max="1000" value="200">
+		<input id="rangeAbsentInvalidStep" name="rangeAbsentInvalidStep" min="200" max="1000" step="100" value="250">
+		<input type="text" id="rangeTextValid" name="rangeTextValid" min="50" max="1000" step="50" value="200">
+		<input type="text" id="rangeTextDataRuleValid" name="rangeTextValid" data-rule-min="50" data-rule-max="1000.00" data-rule-step="50.0" value="200">
+		<input id="rangeAbsentValid" name="rangeAbsentValid" min="50" max="1000" step="50" value="200">
 		<!-- ranges are like numbers in html5, except that browser is not required
 			 to demand an exact value.  User interface could be a slider.
 		  -->
-		<input type="range" id="rangeRangeValid" name="rangeRangeValid" min="50" max="1000" value="200">
+		<input type="range" id="rangeRangeValid" name="rangeRangeValid" min="50" max="1000" step="50" value="200">
 		<input type="number" id="rangeNumberValid" name="rangeNumberValid" min="50" max="1000" value="200">
 		<input type="number" id="rangeNumberInvalidGreater" name="rangeNumberInvalidGreater" min="50" max="200" value="1000">
 		<input type="number" id="rangeNumberInvalidLess" name="rangeNumberInvalidLess" min="50" max="200" value="6">
