Tests: new test for Step exception logic added

--- a/test/index.html
+++ b/test/index.html
@@ -335,6 +335,9 @@
 		<input type="number" id="rangeMinZeroValidEqual" name="rangeMinZeroValidEqual" min="0" value="0">
 		<input type="number" id="rangeMinZeroValidGreater" name="rangeMinZeroValidGreater" min="0" value="1">
 	</form>
+	<form id="stepOnUnsupportedType">
+		<input type="date" id="stepOnUnsupportedTypeInput" name="stepOnUnsupportedTypeInput" step="1">
+	</form>
 	<form id="rangeMinDateValid">
 		<input type="date" id="minDateValid" name="minDateValid" min="2012-11-21" value="2012-12-21">
 	</form>
