Core: Error hidden but input error class not removed
When a field has one rule with option `depends` specified and this
dependency mismatch, the plugin will remove it, so that field will not be
validated on submit by the the rule in question. So if that field is
already invalid, only the error message will be hidden and the error class
will remain.

This commit fixes this issue.

Fixes #1632

--- a/test/index.html
+++ b/test/index.html
@@ -398,6 +398,10 @@
 		<div contenteditable id="contenteditableRequiredValid" data-rule-required="true" name="field3">Some text</div>
 		<input id="contenteditableInput" type="text" data-rule-number="true" name="field4" value="ABC" />
 	</form>
+	<form id="testForm23">
+		<input name="box1" id="box1" type="text" value="" />
+		<input name="box2" id="box2" type="text" value="" />
+	</form>
 	<form id="testForm24">
 		<input id="val1" type="hidden" name="val1" value="hello" />
 		<input id="val2" type="text" name="val2" value="" />
