Core: move message processing from `formatAndAdd` to `defaultMessage`
Fixes #741

--- a/test/index.html
+++ b/test/index.html
@@ -387,6 +387,10 @@
 		<label for="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~">Input text</label>
 		<input type="text" name="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~" id="testForm21!#$%&'()*+,./:;<=>?@[\]^`{|}~" required minlength="15">
 	</form>
+	<form id="testForm22">
+		<label for="tF22Input">Input text</label>
+		<input type="text" name="tF22Input" id="tF22Input" required minlength="5" data-msg-minlength="You should enter at least {0} characters.">
+	</form>
 	<form id="contenteditableForm">
 		<div contenteditable id="contenteditableNumberInvalid" data-rule-number="true" name="field1">ABC</div>
 		<div contenteditable id="contenteditableNumberValid" data-rule-number="true" name="field2">123</div>
