--- a/test/index.html
+++ b/test/index.html
@@ -394,6 +394,11 @@
 		<div contenteditable id="contenteditableRequiredValid" data-rule-required="true" name="field3">Some text</div>
 		<input id="contenteditableInput" type="text" data-rule-number="true" name="field4" value="ABC" />
 	</form>
+	<form id="testForm24">
+		<input id="val1" type="hidden" name="val1" value="hello" />
+		<input id="val2" type="text" name="val2" value="" />
+		<input id="val3" type="text" name="val3" value="" />
+	</form>
 </div>
 </body>
 </html>
