Core: Adding a way to pass method name to remote
Closes #1657.

This allows reusing remote as custom method via addMethod

--- a/test/index.html
+++ b/test/index.html
@@ -407,6 +407,9 @@
 		<input id="val2" type="text" name="val2" value="" />
 		<input id="val3" type="text" name="val3" value="" />
 	</form>
+	<form id="add-method-remote">
+		<input id="add-method-username" type="text" name="username" value="" data-rule-workemail="somevalue" required />
+	</form>
 </div>
 </body>
 </html>
