add demo for inputs with the same name

--- a/demo/index.html
+++ b/demo/index.html
@@ -125,6 +125,10 @@
 				<input id="cname" name="name" minlength="2" type="text" required>
 			</p>
 			<p>
+				<label for="cname2">Name2 (required, at least 2 characters)</label>
+				<input id="cname2" name="name" minlength="2" type="text" required>
+			</p>
+			<p>
 				<label for="cemail">E-Mail (required)</label>
 				<input id="cemail" type="email" name="email" required>
 			</p>
