Core: Unhighlighting field if already highlighted when using remote rule

--- a/test/index.html
+++ b/test/index.html
@@ -410,6 +410,9 @@
 	<form id="add-method-remote">
 		<input id="add-method-username" type="text" name="username" value="" data-rule-workemail="somevalue" required />
 	</form>
+	<form id="testForm25">
+		<input type="text" data-rule-required="true" title="something25" name="something25" id="something25" value="">
+	</form>
 </div>
 </body>
 </html>
