Tests: Upgrade QUnit to 2.0

--- a/test/index.html
+++ b/test/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>jQuery - Validation Test Suite</title>
-	<link rel="stylesheet" href="qunit/qunit.css">
+	<link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
 	<script src="../lib/jquery.js"></script>
 	<script src="../lib/jquery.simulate.js"></script>
 	<script src="../lib/jquery.form.js"></script>
-	<script src="qunit/qunit.js"></script>
+	<script src="../node_modules/qunitjs/qunit/qunit.js"></script>
 	<script src="../lib/jquery.mockjax.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
 	<script src="../dist/additional-methods.js"></script>
