All: IBAN code issue fix, test, demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -222,6 +222,8 @@
 		</li>
 		<li><a href="requirejs/index.html">Loading via RequireJS</a>
 		</li>
+		<li><a href="iban.html">IBAN code demo</a>
+		</li>
 	</ul>
 	<h3>Real-world examples</h3>
 	<ul>
