Demo: use `.on()` instead of `.validateDelegate()`
`validateDelegate()` has been removed in `v1.14.0` and replaced with
`.on(...)` which is only available in `jQuery 1.7+`

--- a/demo/dynamic-totals.html
+++ b/demo/dynamic-totals.html
@@ -42,7 +42,7 @@
 		$("#add").click(addRow);
 
 		// check keyup on quantity inputs to update totals field
-		$("#orderform").validateDelegate("input.quantity", "keyup", function(event) {
+		$("#orderform").on("keyup", "input.quantity", function(event) {
 			var totals = 0;
 			$("#orderitems input.quantity").each(function() {
 				totals += +this.value;
