Demo: add links to Bootstrap and Semantic-UI demos to index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -222,6 +222,10 @@
 		</li>
 		<li><a href="requirejs/index.html">Loading via RequireJS</a>
 		</li>
+		<li><a href="bootstrap/index.html">Using with Bootstrap</a>
+		</li>
+		<li><a href="semantic-ui/index.html">Using with Semantic-UI</a>
+		</li>
 	</ul>
 	<h3>Real-world examples</h3>
 	<ul>
