Core: Added failing test for #1805. Patch by @Arkni.

--- a/test/index.html
+++ b/test/index.html
@@ -414,6 +414,25 @@
 	<form id="testForm25">
 		<input type="text" data-rule-required="true" title="something25" name="something25" id="something25" value="">
 	</form>
+	<form id="testForm26">
+		<select name="day" class="required">
+			<option value="">day</option>
+			<option value="1">1</option>
+			<option value="2">2</option>
+		</select>
+		<br>
+		<select name="month" class="required">
+			<option value="">month</option>
+			<option value="1">1</option>
+			<option value="2">2</option>
+		</select>
+		<br>
+		<select name="year" class="required">
+			<option value="">year</option>
+			<option value="2015">2015</option>
+			<option value="2016">2016</option>
+		</select>
+	</form>	
 </div>
 </body>
 </html>
