--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,7 @@
 	<script src="messages.js"></script>
 	<script src="methods.js"></script>
 	<script src="additional/creditcard.js"></script>
+	<script src="additional/netmask.js"></script>
 	<script src="aria.js"></script>
 	<script src="error-placement.js"></script>
 </head>
