Core: Support jquery3

--- a/test/index.html
+++ b/test/index.html
@@ -22,11 +22,12 @@
 <body id="body">
 <h1 id="qunit-header">
 	<a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Test Suite
-	<a href="?jquery=1.7.2">jQuery 1.7.2</a>
-	<a href="?jquery=1.8.3">jQuery 1.8.3</a>
-	<a href="?jquery=1.9.1">jQuery 1.9.1</a>
-	<a href="?jquery=1.11.1">jQuery 1.11.1</a>
-	<a href="?jquery=git">jQuery Latest (git)</a>
+	<a href="?jquery=1.7.2&jquery.mockjax=1.5.3">jQuery 1.7.2</a>
+	<a href="?jquery=1.8.3&jquery.mockjax=1.5.3">jQuery 1.8.3</a>
+	<a href="?jquery=1.9.1&jquery.mockjax=1.5.3">jQuery 1.9.1</a>
+	<a href="?jquery=1.11.1&jquery.mockjax=1.5.3">jQuery 1.11.1</a>
+	<a href="?jquery=3.1.1&jquery.mockjax=2.2.1">jQuery 3.1.1</a>
+	<a href="?jquery=git&jquery.mockjax=git">jQuery Latest (git)</a>
 </h1>
 <div>
 </div>
