Core: add binding for input with button type. Closes #1891

--- a/test/index.html
+++ b/test/index.html
@@ -229,6 +229,7 @@
 		<input type="hidden" name="hidden" id="hidden1">
 		<input type="text" style="display:none;" name="foo[bar]" id="hidden2">
 		<input type="text" readonly="readonly" id="name" name="name" value="name">
+		<input type="button" name="button" value="Click me">
 		<button name="button">Button</button>
 		<textarea id="area1" name="area1">foobar</textarea>
 		<textarea id="area2" name="area2"></textarea>
@@ -433,7 +434,7 @@
 			<option value="2015">2015</option>
 			<option value="2016">2016</option>
 		</select>
-	</form>	
+	</form>
 </div>
 </body>
 </html>
