Added HTML for button with descendants test
For testing that clicking on descendants of a button element still keeps the button element as the submit button.

--- a/test/index.html
+++ b/test/index.html
@@ -435,6 +435,10 @@
 			<option value="2016">2016</option>
 		</select>
 	</form>
+	<form id="testForm27">
+		<input name="year"/>
+		<button name="submitForm27" value="someValue" type="submit"><span>Submit</span></button>
+	</form>
 </div>
 </body>
 </html>
