Core: assign rules to contenteditable via `.validate()` and `.rules()`
Fixes #1946

--- a/test/index.html
+++ b/test/index.html
@@ -439,6 +439,11 @@
 		<input name="year"/>
 		<button name="submitForm27" value="someValue" type="submit"><span>Submit</span></button>
 	</form>
+	<form id="_contenteditableForm">
+		<div name="first_name" id="first_name" contenteditable placeholder="First Name"></div>
+		<br>
+		<input type="text" name="something" id="_something" />
+	</form>
 </div>
 </body>
 </html>
