Demo: Use https

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -16,7 +16,7 @@
 					<div class="alert alert-info" role="alert">
 						<h4>This demo shows how to integrate JQuery-validation and the Bootstrap framework.</h4>
 						<ul>
-							<li><a href="http://getbootstrap.com/" class="alert-link">Bootstrap home project</a>.</li>
+							<li><a href="https://getbootstrap.com/" class="alert-link">Bootstrap home project</a>.</li>
 						</ul>
 					</div>
 				</div>
