--- a/demo/cinema/index.html
+++ b/demo/cinema/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Retro Cinema Registration</title>
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.3/themes/swanky-purse/jquery-ui.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/swanky-purse/jquery-ui.css">
 	<script src="../../lib/jquery.js"></script>
-	<script src="http://code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
+	<script src="https://code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
 	<script src="../../dist/jquery.validate.js"></script>
 	<script>
 		$( function() {
