--- a/demo/index.html
+++ b/demo/index.html
@@ -114,7 +114,7 @@
 	</style>
 </head>
 <body>
-<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="https://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 	<p>Default submitHandler is set to display an alert into of submitting the form</p>
 	<form class="cmxform" id="commentForm" method="get" action="">
