--- a/demo/milk/index.html
+++ b/demo/milk/index.html
@@ -122,7 +122,7 @@
 	</script>
 </head>
 <body>
-<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="https://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 	<div id="content">
 		<div id="header">
