--- a/demo/radio-checkbox-select-demo.html
+++ b/demo/radio-checkbox-select-demo.html
@@ -29,7 +29,7 @@
 	</style>
 </head>
 <body>
-<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="https://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 	<form class="cmxform" id="form1" method="get" action="">
 		<fieldset>
