--- a/demo/semantic-ui/index.html
+++ b/demo/semantic-ui/index.html
@@ -21,7 +21,7 @@
 					This demo shows how to integrate JQuery-validation and the Semantic UI framework.
 				</div>
 				<ul class="list">
-					<li><a href="http://semantic-ui.com/">Semantic UI home project</a></li>
+					<li><a href="https://semantic-ui.com/">Semantic UI home project</a></li>
 				</ul>
 			</div>
 
