--- a/demo/themerollered.html
+++ b/demo/themerollered.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>jQuery validation plug-in - ThemeRolldered demo</title>
-	<link rel="stylesheet" media="screen" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css">
+	<link rel="stylesheet" media="screen" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css">
 	<style>
 	body {
 		font-size: 62.5%;
@@ -120,7 +120,7 @@
 </form>
 <script src="../lib/jquery.js"></script>
 <script src="../dist/jquery.validate.js"></script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 <script>
 $.validator.setDefaults({
 	submitHandler: function() {
