--- a/demo/custom-methods-demo.html
+++ b/demo/custom-methods-demo.html
@@ -73,7 +73,7 @@
 	</style>
 </head>
 <body>
-<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="https://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 	<form class="cmxform" id="texttests" method="get" action="foo.html">
 		<h2 id="summary"></h2>
