--- a/demo/dynamic-totals.html
+++ b/demo/dynamic-totals.html
@@ -83,7 +83,7 @@
 	</style>
 </head>
 <body>
-<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
+<h1 id="banner"><a href="https://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 <div id="main">
 	<textarea style="display:none" id="template">
 		<tr>
