--- a/demo/requirejs/index.html
+++ b/demo/requirejs/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-	<h1 id="banner"><a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
+	<h1 id="banner"><a href="https://jqueryvalidation.org/">jQuery Validation Plugin</a> Demo</h1>
 	<div id="main">
 
 		<p>Default submitHandler is set to display an alert into of submitting the form</p>
