--- a/test/index.html
+++ b/test/index.html
@@ -109,7 +109,11 @@
 	<form id="testForm5">
 		<input data-rule-equalto="#x2" value="x" name="x1" id="x1">
 		<input data-rule-equalto="#x1" value="y" name="x2" id="x2">
-	</form>
+<!--		<input data-rule-lessThan="#y2" value="1" name="y1" id="y1">
+		<input data-rule-greaterThan="#y1" value="10" name="y2" id="y2">
+		<input data-rule-lessThanEqual="#z2" value="10" name="z1" id="z1">
+		<input data-rule-greaterThanEqual="#z1" value="10" name="z2" id="z2"> -->
+	</form> 
 	<form id="testForm6">
 		<input data-rule-required="true" data-rule-minlength="2" type="checkbox" name="check" id="form6check1">
 		<input type="checkbox" name="check" id="form6check2">
