Test: Ignore elements that belong to other/nested forms

--- a/test/index.html
+++ b/test/index.html
@@ -113,7 +113,7 @@
 		<input data-rule-greaterThan="#y1" value="10" name="y2" id="y2">
 		<input data-rule-lessThanEqual="#z2" value="10" name="z1" id="z1">
 		<input data-rule-greaterThanEqual="#z1" value="10" name="z2" id="z2">
-	</form> 
+	</form>
 	<form id="testForm6">
 		<input data-rule-required="true" data-rule-minlength="2" type="checkbox" name="check" id="form6check1">
 		<input type="checkbox" name="check" id="form6check2">
@@ -448,6 +448,9 @@
 		<div name="first_name" id="first_name" contenteditable placeholder="First Name"></div>
 		<br>
 		<input type="text" name="something" id="_something" />
+	</form>
+	<form id="testForm28">
+		<input type="text" name="f28input" required>
 	</form>
 </div>
 </body>
