--- a/test/index.html
+++ b/test/index.html
@@ -277,7 +277,9 @@
 		<input id="v2-i4" name="v2-i4" class="required" minlength="2">
 		<input id="v2-i5" name="v2-i5" class="required" minlength="2" maxlength="5" customMethod1="123">
 		<input id="v2-i6" name="v2-i6" class="required customMethod2" data-rule-maxlength="5" data-rule-minlength="2">
-		<input id="v2-i7" name="v2-i7">
+		<input id="v2-i7" name="v2-i7" data-rule-number data-rule-required>
+		<input id="v2-i8" name="v2-i8" data-rule-number="" data-rule-required="">
+		<input id="v2-i9" name="v2-i9">
 	</form>
 	<form id="checkables">
 		<input type="checkbox" id="checkable1" name="checkablesgroup" class="required">
