Additional Methods: Inclusion new method nisBr (#1880)
Fixes new implementation

Fixes #1880

--- a/test/index.html
+++ b/test/index.html
@@ -16,17 +16,19 @@
 	<script src="messages.js"></script>
 	<script src="methods.js"></script>
 	<script src="additional/creditcard.js"></script>
+	<script src="additional/netmask.js"></script>
 	<script src="aria.js"></script>
 	<script src="error-placement.js"></script>
 </head>
 <body id="body">
 <h1 id="qunit-header">
 	<a href="http://jqueryvalidation.org/">jQuery Validation Plugin</a> Test Suite
-	<a href="?jquery=1.7.2">jQuery 1.7.2</a>
-	<a href="?jquery=1.8.3">jQuery 1.8.3</a>
-	<a href="?jquery=1.9.1">jQuery 1.9.1</a>
-	<a href="?jquery=1.11.1">jQuery 1.11.1</a>
-	<a href="?jquery=git">jQuery Latest (git)</a>
+	<a href="?jquery=1.7.2&jquery.mockjax=1.5.3">jQuery 1.7.2</a>
+	<a href="?jquery=1.8.3&jquery.mockjax=1.5.3">jQuery 1.8.3</a>
+	<a href="?jquery=1.9.1&jquery.mockjax=1.5.3">jQuery 1.9.1</a>
+	<a href="?jquery=1.11.1&jquery.mockjax=1.5.3">jQuery 1.11.1</a>
+	<a href="?jquery=3.1.1&jquery.mockjax=2.2.1">jQuery 3.1.1</a>
+	<a href="?jquery=git&jquery.mockjax=git">jQuery Latest (git)</a>
 </h1>
 <div>
 </div>
@@ -107,6 +109,10 @@
 	<form id="testForm5">
 		<input data-rule-equalto="#x2" value="x" name="x1" id="x1">
 		<input data-rule-equalto="#x1" value="y" name="x2" id="x2">
+		<input data-rule-lessThan="#y2" value="1" name="y1" id="y1">
+		<input data-rule-greaterThan="#y1" value="10" name="y2" id="y2">
+		<input data-rule-lessThanEqual="#z2" value="10" name="z1" id="z1">
+		<input data-rule-greaterThanEqual="#z1" value="10" name="z2" id="z2">
 	</form>
 	<form id="testForm6">
 		<input data-rule-required="true" data-rule-minlength="2" type="checkbox" name="check" id="form6check1">
@@ -228,6 +234,7 @@
 		<input type="hidden" name="hidden" id="hidden1">
 		<input type="text" style="display:none;" name="foo[bar]" id="hidden2">
 		<input type="text" readonly="readonly" id="name" name="name" value="name">
+		<input type="button" name="button" value="Click me">
 		<button name="button">Button</button>
 		<textarea id="area1" name="area1">foobar</textarea>
 		<textarea id="area2" name="area2"></textarea>
@@ -270,7 +277,9 @@
 		<input id="v2-i4" name="v2-i4" class="required" minlength="2">
 		<input id="v2-i5" name="v2-i5" class="required" minlength="2" maxlength="5" customMethod1="123">
 		<input id="v2-i6" name="v2-i6" class="required customMethod2" data-rule-maxlength="5" data-rule-minlength="2">
-		<input id="v2-i7" name="v2-i7">
+		<input id="v2-i7" name="v2-i7" data-rule-number data-rule-required>
+		<input id="v2-i8" name="v2-i8" data-rule-number="" data-rule-required="">
+		<input id="v2-i9" name="v2-i9">
 	</form>
 	<form id="checkables">
 		<input type="checkbox" id="checkable1" name="checkablesgroup" class="required">
@@ -432,7 +441,19 @@
 			<option value="2015">2015</option>
 			<option value="2016">2016</option>
 		</select>
-	</form>	
+	</form>
+	<form id="testForm27">
+		<input name="year"/>
+		<button name="submitForm27" value="someValue" type="submit"><span>Submit</span></button>
+	</form>
+	<form id="_contenteditableForm">
+		<div name="first_name" id="first_name" contenteditable placeholder="First Name"></div>
+		<br>
+		<input type="text" name="something" id="_something" />
+	</form>
+	<form id="testForm28">
+		<input type="text" name="f28input" required>
+	</form>
 </div>
 </body>
 </html>
