--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
 	<script src="methods.js"></script>
 	<script src="additional/creditcard.js"></script>
 	<script src="additional/netmask.js"></script>
+	<script src="additional/abaRoutingNumber.js"></script>
 	<script src="aria.js"></script>
 	<script src="error-placement.js"></script>
 </head>
