--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
 	<script src="rules.js"></script>
 	<script src="messages.js"></script>
 	<script src="methods.js"></script>
-	<script src="additional/cnhBr.js"></script>
+	<script src="additional/cnhBR.js"></script>
 	<script src="additional/creditcard.js"></script>
 	<script src="additional/netmask.js"></script>
 	<script src="additional/abaRoutingNumber.js"></script>
