--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 	<script src="rules.js"></script>
 	<script src="messages.js"></script>
 	<script src="methods.js"></script>
+	<script src="additional/cnhBR.js"></script>
 	<script src="additional/creditcard.js"></script>
 	<script src="additional/netmask.js"></script>
 	<script src="additional/abaRoutingNumber.js"></script>
@@ -447,6 +448,12 @@
 		<input name="year"/>
 		<button name="submitForm27" value="someValue" type="submit"><span>Submit</span></button>
 	</form>
+	
+	<form id="cnhFormTest">
+		<input id="cnhnumber" name="cnhnumber" required>
+		<button name="submitFormCnh" value="submitFormCnh" type="submit"><span>Submit</span></button>
+	</form>
+	
 	<form id="_contenteditableForm">
 		<div name="first_name" id="first_name" contenteditable placeholder="First Name"></div>
 		<br>
