Core: fix syntax issues, Test: add test for new setting

--- a/test/index.html
+++ b/test/index.html
@@ -182,6 +182,10 @@
 		<input name="testForm17text" id="testForm17text" data-rule-required="true" data-msg="required" aria-describedby="testForm17text-description">
 		<span id="testForm17text-description">This is where you enter your data</span>
 	</form>
+	<form id="ariaDescribedbyCleanup">
+		<label for="ariaDescribedbyCleanupText">My label</label>
+		<input name="ariaDescribedbyCleanupText" id="ariaDescribedbyCleanupText" data-rule-required="true" data-msg="required"/>
+	</form>
 	<form id="testForm18">
 		<!-- test id/name containing brackets -->
 		<input name="testForm18[text]" id="testForm18[text]" required>
@@ -448,12 +452,12 @@
 		<input name="year"/>
 		<button name="submitForm27" value="someValue" type="submit"><span>Submit</span></button>
 	</form>
-	
+
 	<form id="cnhFormTest">
 		<input id="cnhnumber" name="cnhnumber" required>
 		<button name="submitFormCnh" value="submitFormCnh" type="submit"><span>Submit</span></button>
 	</form>
-	
+
 	<form id="_contenteditableForm">
 		<div name="first_name" id="first_name" contenteditable placeholder="First Name"></div>
 		<br>
