--- a/test/index.html
+++ b/test/index.html
@@ -182,32 +182,32 @@
 		<input name="testForm17text" id="testForm17text" data-rule-required="true" data-msg="required" aria-describedby="testForm17text-description">
 		<span id="testForm17text-description">This is where you enter your data</span>
 	</form>
-	<form id="ariaDescribedbyCleanupWithExistingNonError">
+	<form id="ariaDescribedByCleanupWithExistingNonError">
 		<!-- test existing non-error aria-describedby with aria-describedby cleanup on valid fields -->
 		<label for="testCleanupExistingNonErrortext">My Label</label>
 		<input name="testCleanupExistingNonErrortext" id="testCleanupExistingNonErrortext" data-rule-required="true" data-msg="required" aria-describedby="testCleanupExistingNonErrortext-description">
 		<span id="testCleanupExistingNonErrortext-description">This is where you enter your data</span>
 	</form>
-	<form id="ariaDescribedbyCleanup">
+	<form id="ariaDescribedByCleanup">
 		<!-- Test aria-describedby cleanup on valid fields -->
-		<label for="ariaDescribedbyCleanupText">My label</label>
-		<input name="ariaDescribedbyCleanupText" id="ariaDescribedbyCleanupText" data-rule-required="true" data-msg="required"/>
+		<label for="ariaDescribedByCleanupText">My label</label>
+		<input name="ariaDescribedByCleanupText" id="ariaDescribedByCleanupText" data-rule-required="true" data-msg="required"/>
 	</form>
-	<form id="ariaDescribedbyCleanupGroup">
+	<form id="ariaDescribedByCleanupGroup">
 		<!-- Test aria-describedby cleanup on valid fields in a group -->
 		<fieldset>
 			<legend>
 				Name
 			</legend>
-			<label for="ariaDescribedbyCleanupGroupFirst">First</label>
-			<input name="ariaDescribedbyCleanupGroupFirst" id="ariaDescribedbyCleanupGroupFirst" data-rule-required="true" data-msg="required"/>
-			<label for="ariaDescribedbyCleanupGroupMiddle">Middle</label>
-			<input name="ariaDescribedbyCleanupGroupMiddle" id="ariaDescribedbyCleanupGroupMiddle" data-rule-required="true" data-msg="required"/>
-			<label for="ariaDescribedbyCleanupGroupLast">Last</label>
-			<input name="ariaDescribedbyCleanupGroupLast" id="ariaDescribedbyCleanupGroupLast" data-rule-required="true" data-msg="required"/>
+			<label for="ariaDescribedByCleanupGroupFirst">First</label>
+			<input name="ariaDescribedByCleanupGroupFirst" id="ariaDescribedByCleanupGroupFirst" data-rule-required="true" data-msg="required"/>
+			<label for="ariaDescribedByCleanupGroupMiddle">Middle</label>
+			<input name="ariaDescribedByCleanupGroupMiddle" id="ariaDescribedByCleanupGroupMiddle" data-rule-required="true" data-msg="required"/>
+			<label for="ariaDescribedByCleanupGroupLast">Last</label>
+			<input name="ariaDescribedByCleanupGroupLast" id="ariaDescribedByCleanupGroupLast" data-rule-required="true" data-msg="required"/>
 		</fieldset>
-		<label for="ariaDescribedbyCleanupGroupEmail">Email</label>
-		<input name="ariaDescribedbyCleanupGroupEmail" id="ariaDescribedbyCleanupGroupEmail" type="email" data-rule-email="true" data-rule-required="true"/>
+		<label for="ariaDescribedByCleanupGroupEmail">Email</label>
+		<input name="ariaDescribedByCleanupGroupEmail" id="ariaDescribedByCleanupGroupEmail" type="email" data-rule-email="true" data-rule-required="true"/>
 		<button>Submit</button>
 	</form>
 	<form id="testForm18">
