Demo: Add page for ariaDescribedByCleanup

--- a/demo/index.html
+++ b/demo/index.html
@@ -226,6 +226,8 @@
 		</li>
 		<li><a href="semantic-ui/index.html">Using with Semantic-UI</a>
 		</li>
+		<li><a href="aria-describedby-cleanup.html">ariaDescribedByCleanup set to true</a>
+		</li>
 	</ul>
 	<h3>Real-world examples</h3>
 	<ul>
