Added test for addClassRules() with custom messages

--- a/test/index.html
+++ b/test/index.html
@@ -462,6 +462,10 @@
 	<form id="testForm28">
 		<input type="text" name="f28input" required>
 	</form>
+	<form id="testForm29" class="testttt">
+		<input type="text" name="form29field1" id="form29field1" class="class-required-field">
+		<input type="text" name="form29field2" id="form29field2" class="class-required-field">
+	</form>
 </div>
 </body>
 </html>
