Fix attribute assignment

--- a/demo/ajaxSubmit-integration-demo.html
+++ b/demo/ajaxSubmit-integration-demo.html
@@ -74,7 +74,7 @@
 			</p>
 			<p>
 				<label for="pass">Password</label>
-				<input type="password" name="password" id="password" class="required" minlength "5">
+				<input type="password" name="password" id="password" class="required" minlength="5">
 			</p>
 			<p>
 				<input class="submit" type="submit" value="Login">
