Additional: Add vinUS.js validation test cases
Test cases include default test with 17 one's, and additional US and Canada VIN

--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 	<script src="additional/creditcard.js"></script>
 	<script src="additional/netmask.js"></script>
 	<script src="additional/abaRoutingNumber.js"></script>
+	<script src="additional/vinUS.js"></script>
 	<script src="aria.js"></script>
 	<script src="error-placement.js"></script>
 </head>
