Core: Call to resetInternals removed in remote validation callback (#2242)
* Core: Call to resetInternals removed in remote validation callback

* Core: Add unit test for issue #2150 fix

* Core: fix code style errors

Co-authored-by: leonardospina <leo@babieleo.it>
Co-authored-by: Julien Tschäppät <julien.tschappat@smartliberty.ch>

--- a/test/index.html
+++ b/test/index.html
@@ -72,6 +72,10 @@
 		<input type="text" data-rule-required="true" title="buga" name="lastname" id="lastname">
 		<input type="text" data-rule-required="true" title="something" name="something" id="something" value="something">
 	</form>
+	<form id="issue2150TestForm">
+		<input id="remoteTestedInput" type="text" name="remoteTestedInput" value="test" /><br/>
+		<input id="requiredInput" type="text" name="requiredInput" value="" />
+	</form>
 	<form id="testForm1clean">
 		<input title="buga" name="firstnamec" id="firstnamec">
 		<label id="errorFirstnamec" for="firstnamec" class="error">error for firstname</label>
