Additional: Update index.html

--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,8 @@
 	<script src="messages.js"></script>
 	<script src="methods.js"></script>
 	<script src="additional/cnhBR.js"></script>
+	<script src="additional/matriculaCertidaoBR.js"></script>
+	<script src="additional/tituloEleitorBR.js"></script>
 	<script src="additional/creditcard.js"></script>
 	<script src="additional/netmask.js"></script>
 	<script src="additional/abaRoutingNumber.js"></script>
@@ -453,12 +455,12 @@
 		<input name="year"/>
 		<button name="submitForm27" value="someValue" type="submit"><span>Submit</span></button>
 	</form>
-	
+
 	<form id="cnhFormTest">
 		<input id="cnhnumber" name="cnhnumber" required>
 		<button name="submitFormCnh" value="submitFormCnh" type="submit"><span>Submit</span></button>
 	</form>
-	
+
 	<form id="_contenteditableForm">
 		<div name="first_name" id="first_name" contenteditable placeholder="First Name"></div>
 		<br>
@@ -469,10 +471,10 @@
 	</form>
 	<form id="escapeHtmlForm1">
 		<input name="escapeHtmlForm1text" id="escapeHtmlForm1text" data-rule-required="true" />
-	</form>	
+	</form>
 	<form id="escapeHtmlForm2">
 		<input name="escapeHtmlForm2text" id="escapeHtmlForm2text" data-rule-required="true" />
-	</form>	
+	</form>
 </div>
 </body>
 </html>
