Core: Added support for Web Components. Fixes #2492

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,7 @@
 	<script src="../lib/jquery.mockjax.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
 	<script src="../dist/additional-methods.js"></script>
+	<script src="custom-elements.js"></script>
 	<script src="test.js"></script>
 	<script src="rules.js"></script>
 	<script src="messages.js"></script>
@@ -472,6 +473,9 @@
 	</form>	
 	<form id="escapeHtmlForm2">
 		<input name="escapeHtmlForm2text" id="escapeHtmlForm2text" data-rule-required="true" />
+	</form>
+	<form id="customElementsForm">
+		<custom-text name="customTextElement" id="customTextElement" />
 	</form>	
 </div>
 </body>
