Fix: dont use self closing tag on custom-text element

--- a/test/index.html
+++ b/test/index.html
@@ -498,12 +498,12 @@
 	</form>
 	<form id="escapeHtmlForm1">
 		<input name="escapeHtmlForm1text" id="escapeHtmlForm1text" data-rule-required="true" />
-	</form>	
+	</form>
 	<form id="escapeHtmlForm2">
 		<input name="escapeHtmlForm2text" id="escapeHtmlForm2text" data-rule-required="true" />
 	</form>
 	<form id="customElementsForm">
-		<custom-text name="customTextElement" id="customTextElement" />
+		<custom-text name="customTextElement" id="customTextElement"></custom-text>
 	</form>
 	<form id="testForm29">
 		<input type="text" name="f29input1" required>
