Chore: test on jquery 4.0.0 and mockjax 2.7.0

--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,7 @@
 	<a href="?jquery=1.9.1&jquery.mockjax=1.5.3">jQuery 1.9.1</a>
 	<a href="?jquery=1.11.1&jquery.mockjax=1.5.3">jQuery 1.11.1</a>
 	<a href="?jquery=3.1.1&jquery.mockjax=2.2.1">jQuery 3.1.1</a>
+	<a href="?jquery=4.0.0&jquery.mockjax=2.7.0">jQuery 4.0.0</a>
 	<a href="?jquery=git&jquery.mockjax=git">jQuery Latest (git)</a>
 </h1>
 <div>
